<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    tools:ignore="Autofill">

    <ImageButton
        android:id="@+id/button_google"
        style="@android:style/Widget.ImageButton"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/boton_de_google"
        android:src="@mipmap/icon_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />

    <TextView
        android:id="@+id/text_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="189dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="187dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Singin"
        android:layout_width="389dp"
        android:layout_height="42dp"

        android:layout_marginStart="11dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="11dp"
        android:background="@color/md_red_100"
        android:text="@string/sing_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_Password" />

    <TextView
        android:id="@+id/text_Registrar"
        android:layout_width="150dp"
        android:layout_height="27dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="131dp"
        android:text="@string/no_tienes_una_cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Singin" />

    <EditText
        android:id="@+id/edit_text_Password"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="62dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Password"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/text_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginStart="173dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="176dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_Email" />

    <Button
        android:id="@+id/button_Registrar"
        android:layout_width="391dp"

        android:layout_height="42dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:background="@color/md_red_100"
        android:text="@string/registrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Registrar" />

    <TextView
        android:id="@+id/text_Facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="25dp"
        android:text="@string/inicia_sesion_con_facebook"
        app:layout_constraintBottom_toTopOf="@+id/button_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Registrar" />

    <EditText
        android:id="@+id/edit_text_Email"
        android:layout_width="285dp"
        android:layout_height="47dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="63dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Email"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/button_facebook"
        android:layout_width="67dp"
        android:layout_height="68dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button_facebook"
        android:src="@mipmap/icon_facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="214dp"
        android:layout_marginTop="461dp"
        android:layout_marginEnd="197dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
