<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3EEEE"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/text_Email_Home"
        android:layout_width="388dp"
        android:layout_height="40dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        app:layout_constraintEnd_toStartOf="@+id/button_Cerrar_Secion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_Provedor"
        android:layout_width="385dp"
        android:layout_height="38dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="342dp"
        android:text="@string/provedor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Email_Home" />

    <Button
        android:id="@+id/button_Cerrar_Secion"
        android:layout_width="389dp"
        android:layout_height="42dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="432dp"
        android:text="@string/cerrar_secion"
        android:background="@color/md_red_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Provedor" />

</androidx.constraintlayout.widget.ConstraintLayout>